--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <a href="http://kubsu.ru/">КубГУ</a>
-<a href="http://kubsu.ru/"><img scr="image.jpg"></a>
+<a href="http://kubsu.ru/"><img scr="image.jpg">картинка</a>
