--- a/index.html
+++ b/index.html
@@ -60,5 +60,13 @@
           <option value="Значение11">Scala</option>
         </select>
       </label><br />
+    <label>
+        Биография:<br />
+        <textarea name="field-name-2">текст</textarea>
+      </label><br />
+      <label><input type="checkbox"
+        name="check-1" />
+        С контрактом ознакомлен(а)</label><br />
+        <input type="submit" value="Сохранить" />
 </body>
 </html>
