--- a/web/task1/index.html
+++ b/web/task1/index.html
@@ -6,8 +6,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body background="gray">
+    <div class="block-1">
   <h1>Список</h1>
   <ul>
     <li><a href="http://www.kubsu.ru/">абсолютная гиперссылка;</a></li>
@@ -36,7 +38,7 @@
       </ol>
     </li>
     <li><a href="ftp.name.host.com">ссылка на файл на сервере FTP с авторизацией;</a></li>
-  </ul>
+  </ul></div>
   <h2>Форма</h2>
     <input name="field-name-1" value="ФИО"><br>
     Телефон:<br>
