--- a/web/task1/index.html
+++ b/web/task1/index.html
@@ -33,8 +33,8 @@
     <li><a href="https://www.citilink.ru/" rel="noindex">запрещенную для индексации поисковиками;</a></li>
     <li>
       <ol>
-        <li><a href="https://www.russianfood.com/recipes/bytype/?fid=1331">рецепт</a> - <title>пирожное картошка</title></li>
-        <li><a href="https://semena.ru/catalog/semena/ovoshchi/kartofel_/">семена</a> - <title>картошка</title></li>
+        <li><a href="https://www.russianfood.com/recipes/bytype/?fid=1331" title="картошка">рецепт</a></li>
+        <li><a href="https://semena.ru/catalog/semena/ovoshchi/kartofel_/" title="семена">семена</a></li>
       </ol>
     </li>
     <li><a href="ftp.name.host.com">ссылка на файл на сервере FTP с авторизацией;</a></li>
