--- a/web/task2/index.html
+++ b/web/task2/index.html
@@ -26,7 +26,12 @@
     <li><a href="../Внутренняя страница.html">относительная на страницу в каталоге двумя уровнями выше;</a></li>
     <li> <p><a href="">контекстная</a> в тексте абзаца;</li></p> 
     <li><a href="https://www.consultant.ru/document/cons_doc_LAW_10699/#:~:text=%22-,%D0%A3%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D1%8B%D0%B9%20%D0%BA%D0%BE%D0%B4%D0%B5%D0%BA%D1%81%20%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9%20%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8,-%22%20%D0%BE%D1%82%2013.06.1996%20N">ссылка на фрагмент страницы стороннего сайта;</a></li>
-    <li><img src="images/map.gif" width="411" height="46" usemap="#map" alt="Навигация">ссылки из прямоугольных и круглых областей картинки (HTML-тег map);</li>
+    <li><img src="im" width="100" usemap="#map" alt="Навигация">
+        <map name="map">
+           <area shape="rect" coords="50,50,10,10" href="https://coleusy.ru/" alt="Навигация"> 
+        </map>
+        ссылки из прямоугольных и круглых областей картинки (HTML-тег map);
+    </li>
     <li><a href="">ссылка с пустым href;</a></li>
     <li><a>ссылка без href;</a></li>
     <li><a href="https://www.citilink.ru/" rel="nofollow">ссылка, по которой запрещен переход поисковикам;</a></li>
