--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="web/task1/index.html">1 задание</a>       
-    <a href="web/task2/index.html">2 задание</a>
+    <a href="web/task1/index.html">Задание 1</a><br>       
+    <a href="web/task2/index.html">Задание 2</a><br>
 </body>
 </html>
