--- a/web/task2/index.html
+++ b/web/task2/index.html
@@ -69,11 +69,10 @@
         <li>
             <a href="https://www.citilink.ru/" rel="noindex">запрещенную для индексации поисковиками;</a></li>
         <li>
-            <ol>
-                <a href="https://www.russianfood.com/recipes/bytype/?fid=1331" title="">рецепт</a> - <title>пирожное картошка</title>
-            </ol>
-                <a href="https://semena.ru/catalog/semena/ovoshchi/kartofel_/">семена</a> - <title>картошка</title>
-            </ol>
+          <ol>
+            <li><a href="https://www.russianfood.com/recipes/bytype/?fid=1331" title="картошка">рецепт</a></li>
+            <li><a href="https://semena.ru/catalog/semena/ovoshchi/kartofel_/" title="семена">семена</a></li>
+          </ol>
         </li>
         <li>
             <a href="ftp.name.host.com">ссылка на файл на сервере FTP с авторизацией;</a></li>
