--- a/web/task2/index.html
+++ b/web/task2/index.html
@@ -13,10 +13,10 @@
         <header class="main-navigation">
             <nav>
             <ul> 
-                <li><a href="#">lifestyle</a></li>
-                <li><a href="#">photodiary</a></li>
-                <li><a href="#">music</a></li>
-                <li><a href="#">travel</a></li>
+                <li><a href="https://www.shazam.com/ru/home">shazam</a></li>
+                <li><a href="https://ru.imgbb.com/">host</a></li>
+                <li><a href="https://archive.org/">archive</a></li>
+                <li><a href="https://youtu.be/MI83NiZbsFw?si=EmIieOl_vLaeNH5U">math</a></li>
             </ul>
             </nav>
             <img src="image/5c4fe66s-960.jpg" alt="Логотип" width="90px">
