--- a/web/task2/index.html
+++ b/web/task2/index.html
@@ -30,7 +30,7 @@
         <li>
             <a href="https://www.kubsu.ru">абсолютная в протоколе https;</a></li>
         <li>
-            <a href="https://www.kubsu.ru/"><img src="image.jpg" style="width: 60px;" /></a></li>
+            <a href="https://www.kubsu.ru/"><img src="image/gorshok.jpg" style="width: 60px;" alt="Горшок"></a></li>
         <li>
             <a href="//www.kubsu.ru/ru/university"> сокращенная ссылка на внутреннюю страницу;</a></li>
         <li>
@@ -54,7 +54,7 @@
         <li>
             <a href="https://www.consultant.ru/document/cons_doc_LAW_10699/#:~:text=%22-,%D0%A3%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BD%D1%8B%D0%B9%20%D0%BA%D0%BE%D0%B4%D0%B5%D0%BA%D1%81%20%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9%20%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8,-%22%20%D0%BE%D1%82%2013.06.1996%20N">ссылка на фрагмент страницы стороннего сайта;</a></li>
         <li>
-            <img src="im" width="100" usemap="#map" alt="Навигация">
+            <img src="image/cateer.jpg" width="100" usemap="#map" alt="Навигация">
         <map name="map">
            <area shape="rect" coords="50,50,10,10" href="https://coleusy.ru/" alt="Навигация"> 
         </map>
