--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="web/task1/index.html">Задание 1</a><br>       
     <a href="web/task2/index.html">Задание 2</a><br>
     <a href="web/tsk3/index.html">Задание 3</a><br>
+    <a href="web/tsk4/index.html">Задание 4</a><br>
 </body>
 </html>
