--- a/web/tsk3/index.html
+++ b/web/tsk3/index.html
@@ -133,7 +133,7 @@
                 <form id="id_form" action="/" method="POST" class="block">
                     <h2 class="block_title" style="background: burlywood;">Форма</h2>
                         <label>
-                            <input class="form_item" type="text" name="fio" placeholder="Введите ФИО" required pattern="">
+                            <input class="form_item" type="text" name="fio" placeholder="Введите ФИО" required pattern="^[А-Яа-яЁё\s]+$">
                         </label>
                         <br>
                         <label>
@@ -163,8 +163,7 @@
                         </p>
                         <br>
                         <label class="form_text">
-                            Выберете свои любимые языки:
-                            <br>
+                            Любимый язык программирования:
                             <br>
                             <select name="favorite_language" multiple required>
                                 <option value="Pascal">Pascal</option>
@@ -181,7 +180,7 @@
                             </select>
                         </label>
                         <br>
-                        <textarea name="biography" required>Расскажите немного о себе</textarea>
+                        <textarea name="biography" required>Биография</textarea>
                         <br>
                         <label class="agreement">
                             <input type="checkbox" name="agreement" required>
