--- a/web/tsk5/index.html
+++ b/web/tsk5/index.html
@@ -29,9 +29,9 @@
               <td style="width: 50%; padding: 10px;">
                 <form>
                     <div>
-                      <input type="radio">карта, 
-                      <input type="radio">б/нал
-                      <input type="radio">наличные
+                      <label><input type="radio" name="options" value="option1">карта</label> 
+                      <label><input type="radio" name="options" value="option2">б/нал</label>
+                      <label><input type="radio" name="options" value="option3">наличные</label>
                     </div><br>
                     <select name="prodType">
                       <option value="1">камень</option>
