--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <a href="web/task2/index.html">Задание 2</a><br>
     <a href="web/tsk3/index.html">Задание 3</a><br>
     <a href="web/tsk4/index.html">Задание 4</a><br>
-    <a href="web/tsk5/index.html">Задание 5</a><br>
+    <a href="web/tsk5/index.html">Задание 5 и 6</a><br>
 </body>
 </html>
