--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="web/tsk3/index.html">Задание 3</a><br>
     <a href="web/tsk4/index.html">Задание 4</a><br>
     <a href="web/tsk5/index.html">Задание 5 и 6</a><br>
+    <a href="web/tsk7/jquery.html">Задание 5 и 6</a><br>
 </body>
 </html>
