--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="web/tsk4/index.html">Задание 4</a><br>
     <a href="web/tsk5/index.html">Задание 5 и 6</a><br>
     <a href="web/tsk7/jquery.html">Задание 7</a><br>
+    <a href="web/tsk8/inner.html">Задание 8</a><br>
 </body>
 </html>
